image antiloop + galleryVideo preview

--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -40,7 +40,7 @@
         <input type="hidden" class="item-id" value="{{ item.id }}"/>
         <a href="{{ item.show_url }}" target="_blank" class="item-show">
           <span class="inner">
-              <img src="{{ item.video_preview }}">
+              <img src="{{ item.admin_variation.url }}">
           </span>
         </a>
 
