--- a/src/apps_common/gallery/templates/gallery/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/gallery.html
@@ -8,7 +8,7 @@
       <div class="gallery-item gallery-item-video-link" data-provider="{{ item.video.provider.name }}"
            data-key="{{ item.video.key }}">
         <div class="inner">
-          <img src="{{ item.video_preview }}" alt="">
+          <img src="{{ item.video_preview.small.url }}" alt="">
         </div>
       </div>
     {% endif %}
