--- a/src/apps_common/admin_dump/templates/admin_dump/admin/index.html
+++ b/src/apps_common/admin_dump/templates/admin_dump/admin/index.html
@@ -60,7 +60,7 @@
           </th>
           <th>
             <a href="{% url 'admin_dump:delete' file.0 %}" class="btn btn-danger btn-small"
-                onclick="return confirm('{% trans 'Are you shure?' %}')">
+                onclick="return confirm('{% trans 'Are you sure?' %}')">
               {% trans 'Delete' %}
             </a>
           </th>
