--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -3,6 +3,7 @@
 @import 'mixins/border_radius';
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
+@import 'mixins/flex';
 @import 'mixins/font_size';
 @import 'mixins/grayscale';
 @import 'mixins/justify_blocks';
