--- a/src/static/scss/mixins/_flex.scss
+++ b/src/static/scss/mixins/_flex.scss
@@ -1,39 +1,71 @@
 @mixin display_flex() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
 }
 
-@mixin flex($args...) {
-  -webkit-flex: $args;
-  -moz-flex: $args;
-  -ms-flex: $args;
-  flex: $args;
+@mixin justify-content($alignment) {
+  -webkit-box-justify-content: $alignment;
+  -moz-box-justify-content: $alignment;
+  -ms-justify-content: $alignment;
+  -webkit-justify-content: $alignment;
+  justify-content: $alignment;
 }
 
-@mixin flex-wrap($args...) {
-  -webkit-flex-wrap: $args;
-  -moz-flex-wrap: $args;
-  -ms-flex-wrap: $args;
-  flex-wrap: $args;
+@mixin flex-wrap($wrap) {
+  -webkit-box-flex-wrap: $wrap;
+  -moz-box-flex-wrap: $wrap;
+  -webkit-flex-wrap: $wrap;
+  -ms-flex-wrap: $wrap;
+  flex-wrap: $wrap;
 }
 
-@mixin flex-basis($args...) {
-  -webkit-flex-basis: $args;
-  -moz-flex-basis: $args;
-  -ms-flex-basis: $args;
-  flex-basis: $args;
+@mixin flex-grow($grow) {
+  -webkit-box-flex-grow: $grow;
+  -moz-box-flex-grow: $grow;
+  -webkit-flex-grow: $grow;
+  -ms-flex-grow: $grow;
+  flex-grow: $grow;
 }
 
-@mixin flex-grow($args...) {
-  -webkit-flex-grow: $args;
-  -moz-flex-grow: $args;
-  -ms-flex-grow: $args;
-  flex-grow: $args;
+@mixin align-items($alignment) {
+  -webkit-box-align-items: $alignment;
+  -moz-box-align-items: $alignment;
+  -ms-align-items: $alignment;
+  -webkit-align-items: $alignment;
+  align-items: $alignment;
 }
 
-@mixin order($args...) {
-  -webkit-order: $args;
-  -moz-order: $args;
-  -ms-order: $args;
-  order: $args;
+@mixin align-self($alignment) {
+  -webkit-box-align-self: $alignment;
+  -moz-box-align-self: $alignment;
+  -ms-align-self: $alignment;
+  -webkit-align-self: $alignment;
+  align-self: $alignment;
+}
+
+@mixin order($order) {
+  -webkit-box-ordinal-group: $order;
+  -moz-box-ordinal-group: $order;
+  -ms-flex-order: $order;
+  -webkit-order: $order;
+  order: $order;
+}
+
+@mixin flex($flex) {
+  -webkit-box-flex: $flex;
+  -moz-box-flex: $flex;
+  -webkit-flex: $flex;
+  -ms-flex: $flex;
+  flex: $flex;
+}
+
+@mixin flex-basis($basis) {
+  -webkit-box-flex-basis: $basis;
+  -moz-box-flex-basis: $basis;
+  -webkit-flex-basis: $basis;
+  -ms-flex-basis: $basis;
+  flex-basis: $basis;
 }
