translations + restore_backup.sh

--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -1,6 +1,7 @@
 @import 'mixins/animations';
 @import 'mixins/background';
 @import 'mixins/border_radius';
+@import 'mixins/box_shadow';
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
 @import 'mixins/flex';
