fix menu, fix slider

--- a/src/apps/users/templates/users/ajax_login.html
+++ b/src/apps/users/templates/users/ajax_login.html
@@ -20,7 +20,7 @@
 
   <fieldset>
     <button type="submit" class="btn">{% trans 'Sign in' %}</button>
-    <a href="{% url 'users:reset' %}" class="reset-password">{% trans 'Forgot your password?' %}</a>
-    <a href="{% url 'users:reset' %}" class="register">{% trans 'Registration' %}</a>
+    <a href="{% url 'users:reset' %}" class="reset-password-popup">{% trans 'Forgot your password?' %}</a>
+    <a href="{% url 'users:reset' %}" class="register-popup">{% trans 'Registration' %}</a>
   </fieldset>
 </form>
