--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -43,54 +43,54 @@
 }
 
 // Кнопка меню для мобильной версии
+$menu_line_height: 3px;
+$menu_line_gap: 5px;
 #mobile-menu {
-  display: none;
   position: relative;
   float: right;
-  width: 36px;
-  height: 27px;
+  width: 28px;
+  height: 3 * $menu_line_height + 2 * $menu_line_gap;
   cursor: pointer;
   text-align: left;
   z-index: 105;
   vertical-align: middle;
   @include unselectable;
-  @include media_interval(0, $media1024) {
-    display: inline-block;
-  }
 
   &:before, &:after {
     content: '';
     position: absolute;
     width: 100%;
-    height: 5px;
+    height: $menu_line_height;
     background: #FFFFFF;
-    @include transition-property(-webkit-transform, transform);
-    @include transition-duration(0.75s);
+    @include transition-timing-function(linear);
   }
   &:before {
     top: 0;
-    box-shadow: #FFFFFF 0 11px 0 0;
-    @include transition-property(-webkit-transform, transform, box-shadow);
-    @include transition-duration(0.75s, 0.75s, 0.2s);
-    @include transition-delay(0s, 0s, 0.1s);
+    box-shadow: #FFFFFF 0 ($menu_line_height + $menu_line_gap) 0 0;
+    @include transform(translate3d(0, 0, 0) rotate(0deg));
+    @include transition-property(-webkit-transform, transform, box-shadow, top);
+    @include transition-duration(0.55s, 0.55s, 0.2s, 0.2s);
+    @include transition-delay(0s, 0s, 0.45s, 0.45s);
   }
   &:after {
-    bottom: 0;
+    top: 100%;
+    @include transform(translate3d(0, -100%, 0) rotate(0deg));
+    @include transition-property(-webkit-transform, transform, top);
+    @include transition-duration(0.55s, 0.55s, 0.2s);
+    @include transition-delay(0s, 0s, 0.45s);
   }
 
   &.active {
-    top: -4px;
-
     &:before {
       top: 50%;
       box-shadow: transparent 0 0 0 0;
       @include transform(translate3d(0, -50%, 0) rotate(225deg));
-      @include transition-duration(0.75s, 0.75s, 0s);
-      @include transition-delay(0s);
+      @include transition-delay(0.1s, 0.1s, 0s, 0s);
     }
     &:after {
       top: 50%;
       @include transform(translate3d(0, -50%, 0) rotate(315deg));
+      @include transition-delay(0.1s, 0.1s, 0s);
     }
   }
 }
