--- a/src/static/scss/slider/plugins/controls.scss
+++ b/src/static/scss/slider/plugins/controls.scss
@@ -45,6 +45,7 @@
       height: 0;
       padding-bottom: 100%;
       background: url(../../../img/arrows.png) no-repeat 100% 0;
+      background-size: 200% 100%;
     }
   }
 }
