--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -33,7 +33,7 @@
   }
   h1, h2, h3 {
     margin: 1.1em 0 0.55em;
-    word-break: break-word;
+    word-wrap: break-word;
     @include font-size(30px);
     @include media_interval(0, $media768) {
       letter-spacing: 1px;
