--- a/src/apps_common/gallery/static/gallery/scss/gallery.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery.scss
@@ -41,9 +41,12 @@
     @include no_fontsize;
 
     .gallery-button {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
       z-index: 10;
       cursor: pointer;
-      @include overlay($left:auto);
       @include unselectable;
 
       &:hover {
@@ -85,7 +88,11 @@
     }
 
     #gallery-video-player {
-      @include overlay;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
 }
