--- a/src/apps/users/templates/users/ajax_login.html
+++ b/src/apps/users/templates/users/ajax_login.html
@@ -3,7 +3,8 @@
 <p class="title">{% trans 'Sign In or Register' %}</p>
 
 {{ form.media }}
-<form method="post" action="{% url 'users:login' %}" id="ajax-login-form" autocomplete="off">
+<form method="post" action="{% url 'users:login' %}" id="ajax-login-form"
+      class="users-login-form users-popup-form users-form" autocomplete="off">
   {% csrf_token %}
 
   {{ form.non_field_errors.as_ul }}
