--- a/src/apps/users/templates/users/login.html
+++ b/src/apps/users/templates/users/login.html
@@ -5,7 +5,8 @@
   <h1 class="title-h1">{% trans 'Authorization' %}</h1>
 
   {{ form.media }}
-  <form method="post" action="" id="login-form" autocomplete="off">
+  <form method="post" action="" id="login-form"
+        class="users-login-form users-form" autocomplete="off">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ request.GET.next }}">
 
@@ -25,5 +26,9 @@
       <button type="submit" class="btn">{% trans 'Sign in' %}</button>
     </fieldset>
   </form>
+
+  <script>
+    $('#login-form').find('input:visible:first').focus();
+  </script>
 
 {% endblock content %}
