--- a/src/apps/users/templates/users/reset_confirm.html
+++ b/src/apps/users/templates/users/reset_confirm.html
@@ -5,7 +5,8 @@
   <h1 class="title-h1">{% trans 'Reset password' %}</h1>
 
   {{ form.media }}
-  <form method="post" action="" id="reset-confirm-form" autocomplete="off">
+  <form method="post" action="" id="reset-confirm-form"
+        class="users-reset-confirm-form users-form" autocomplete="off">
     {% csrf_token %}
 
     {{ form.non_field_errors.as_ul }}
