--- a/src/apps/users/static/users/scss/users.scss
+++ b/src/apps/users/static/users/scss/users.scss
@@ -12,11 +12,11 @@
     word-wrap: break-word;
   }
 
-  .reset-password {
+  .reset-password-popup {
     margin-left: 12px;
   }
 
-  .register {
+  .register-popup {
     margin-left: 10px;
   }
 }
