--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -1,8 +1,13 @@
 @import 'mixins';
 
 .text-styles {
+  @include default_fontsize;
+
   p {
-    margin-bottom: 10px;
+    margin-bottom: 1em;
+    &:nth-last-of-type(1) {
+      margin-bottom: 0;
+    }
   }
 
   a {
