--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -1,10 +1,15 @@
 @import 'mixins';
 
+label {
+  @include default_fontsize;
+}
+
 input:not([type="radio"]):not([type="checkbox"]), select, textarea {
   width: 170px;
   padding: 5px 6px;
   border: 1px solid #808080;
   @include default_font;
+  @include default_fontsize;
   @include border_radius(4px);
 }
 
