--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -1,5 +1,9 @@
 @import 'mixins';
 
+form {
+  @include border-box;
+}
+
 label {
   @include default_fontsize;
 }
@@ -9,7 +13,7 @@ input:not([type="radio"]):not([type="checkbox"]), select, textarea {
   padding: 5px 6px;
   border: 1px solid #808080;
   @include default_font;
-  @include default_fontsize;
+  @include font-size(16px);
   @include border_radius(4px);
 }
 
@@ -18,8 +22,4 @@ fieldset {
   &:nth-last-of-type(1) {
     margin-bottom: 0;
   }
-}
-
-.error {
-  color: #CA0000;
 }
