--- a/src/apps/users/templates/users/reset_complete.html
+++ b/src/apps/users/templates/users/reset_complete.html
@@ -2,13 +2,21 @@
 {% load i18n %}
 
 {% block content %}
-  <h1 class="title-h1">{% trans 'Reset password' %}</h1>
 
-  <p>{% trans 'Your password was successfully changed. You will be redirected to a new page in 5 seconds.' %}</p>
+  <div class="grid">
+    <div class="gc gc-alone">
+      <h1 class="title-h1">{% trans 'Reset password' %}</h1>
+    </div>
 
-  <script>
-    setTimeout(function() {
-      location.href = '{{ redirect|default:"/" }}';
-    }, 5000);
-  </script>
+    <div class="gc gc-alone">
+      <p>{% trans 'Your password was successfully changed. You will be redirected to a new page in 5 seconds.' %}</p>
+
+      <script>
+        setTimeout(function() {
+          location.href = '{{ redirect|default:"/" }}';
+        }, 5000);
+      </script>
+    </div>
+  </div>
+
 {% endblock content %}
