--- a/src/apps/users/templates/users/reset_done.html
+++ b/src/apps/users/templates/users/reset_done.html
@@ -2,7 +2,15 @@
 {% load i18n %}
 
 {% block content %}
-  <h1 class="title-h1">{% trans 'Reset password' %}</h1>
 
-  <p>{% blocktrans %}We've sent password reset instructions to your email <b>{{ email }}</b>.{% endblocktrans %}</p>
+  <div class="grid">
+    <div class="gc gc-alone">
+      <h1 class="title-h1">{% trans 'Reset password' %}</h1>
+    </div>
+
+    <div class="gc gc-alone">
+      <p>{% blocktrans %}We've sent password reset instructions to your email <b>{{ email }}</b>.{% endblocktrans %}</p>
+    </div>
+  </div>
+
 {% endblock content %}
