--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -40,25 +40,32 @@
   margin: 60px auto;
   max-width: 80%;
   min-width: 200px;
-  border: 10px solid #DDDDDD;
-  background-color: #DDDDDD;
-  @include border_radius(12px);
 }
 
 #popup-content {
   overflow: hidden;
-  min-height: 40px;
-  padding: 14px 16px;
+  min-height: 150px;
+  padding: 36px 50px;
+  color: $white;
   text-align: initial;
-  background-color: #C0C0C0;
+  background-color: $green;
   @include border-box;
-  @include border_radius(6px);
 
   .title {
-    margin: 0 0 12px;
-    padding: 0;
-    line-height: 1;
+    color: $white;
+    margin-bottom: 30px;
+    @include media_interval(0, $media480) {
+      margin-bottom: 16px;
+    }
+  }
+
+  .btn {
+    min-width: 150px;
+    margin-top: 10px;
     @include font-size(16px);
+    @include media_interval(0, $media480) {
+      @include font-size(14px);
+    }
   }
 }
 
@@ -100,30 +107,5 @@
     &:before, &:after {
         background: #FFFFFF;
     }
-  }
-}
-
-.preloader {
-  #popup-content:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
-    background: rgba(255, 255, 255, 0.5);
-  }
-  #popup-content:after {
-    content: '';
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    width: 54px;
-    height: 54px;
-    margin: -27px 0 0 -27px;
-    background: url(preloader.gif) no-repeat fixed center center #202020;
-    z-index: 1001;
-    @include border_radius(12px);
   }
 }
