--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -39,17 +39,24 @@
   vertical-align: middle;
   margin: 60px auto;
   max-width: 80%;
-  min-width: 200px;
+  min-width: 500px;
+  @include media_interval(0, $media768) {
+    min-width: 200px;
+  }
 }
 
 #popup-content {
   overflow: hidden;
-  min-height: 150px;
+  min-height: 200px;
   padding: 36px 50px;
   color: $white;
   text-align: initial;
   background-color: $green;
   @include border-box;
+  @include media_interval(0, $media480) {
+    padding: 36px 20px;
+    min-height: 100px;
+  }
 
   .title {
     color: $white;
@@ -71,17 +78,22 @@
 
 #popup-close-button {
   position: absolute;
-  right: -55px;
-  top: -50px;
-  width: 40px;
-  height: 40px;
+  right: -36px;
+  top: -36px;
+  width: 36px;
+  height: 36px;
   z-index: 100;
   cursor: pointer;
   @include transform(scale(0.8));
-  @include transform-origin(0 100%);
   @include transition-property(-webkit-transform, transform);
   @include transition-duration(0.2s);
   @include transition-timing-function(ease-in);
+  @include media_interval(0, $media768) {
+    right: 0;
+    top: 0;
+    width: 30px;
+    height: 30px;
+  }
 
   &:before, &:after {
     content: '';
@@ -90,10 +102,13 @@
     top: 50%;
     width: 100%;
     height: 5px;
-    background: #A0A0A0;
+    background: $gray;
     @include transition-property(background);
     @include transition-duration(0.2s);
     @include transition-timing-function(ease-in);
+    @include media_interval(0, $media768) {
+      background: $white;
+    }
   }
   &:before {
     @include transform(translate3d(0, -50%, 0) rotate(45deg));
@@ -105,7 +120,7 @@
   &:hover {
     @include transform(scale(1));
     &:before, &:after {
-        background: #FFFFFF;
+        background: $white;
     }
   }
 }
