--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -49,29 +49,20 @@
   overflow: hidden;
   min-height: 200px;
   padding: 36px 50px;
-  color: $white;
+  color: #FFF;
   text-align: initial;
-  background-color: $green;
+  background-color: #0B0;
   @include border-box;
   @include media_interval(0, $media480) {
-    padding: 36px 20px;
+    padding: 20px 20px 36px;
     min-height: 100px;
   }
 
   .title {
-    color: $white;
+    color: #FFF;
     margin-bottom: 30px;
     @include media_interval(0, $media480) {
       margin-bottom: 16px;
-    }
-  }
-
-  .btn {
-    min-width: 150px;
-    margin-top: 10px;
-    @include font-size(16px);
-    @include media_interval(0, $media480) {
-      @include font-size(14px);
     }
   }
 }
@@ -102,12 +93,12 @@
     top: 50%;
     width: 100%;
     height: 5px;
-    background: $gray;
+    background: #F2F2F2;
     @include transition-property(background);
     @include transition-duration(0.2s);
     @include transition-timing-function(ease-in);
     @include media_interval(0, $media768) {
-      background: $white;
+      background: #FFF;
     }
   }
   &:before {
