--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -111,7 +111,7 @@
   &:hover {
     @include transform(scale(1));
     &:before, &:after {
-        background: $white;
+        background: #FFF;
     }
   }
 }
