--- a/src/apps/users/templates/users/ajax_register.html
+++ b/src/apps/users/templates/users/ajax_register.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<p class="title">{% trans 'Registration' %}</p>
+<p class="title title-h1">{% trans 'Registration' %}</p>
 
 {{ form.media }}
 <form method="post" action="{% url 'users:register' %}" id="ajax-register-form"
