--- a/src/apps/users/templates/users/ajax_reset.html
+++ b/src/apps/users/templates/users/ajax_reset.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<p class="title">{% trans 'Reset password' %}</p>
+<p class="title title-h1">{% trans 'Reset password' %}</p>
 
 {{ form.media }}
 <form method="post" action="" id="ajax-reset-password-form"
