--- a/src/apps/users/templates/users/ajax_login.html
+++ b/src/apps/users/templates/users/ajax_login.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<p class="title">{% trans 'Sign In or Register' %}</p>
+<p class="title title-h1">{% trans 'Sign In or Register' %}</p>
 
 {{ form.media }}
 <form method="post" action="{% url 'users:login' %}" id="ajax-login-form"
