--- a/src/apps/users/templates/users/ajax_reset_done.html
+++ b/src/apps/users/templates/users/ajax_reset_done.html
@@ -1,4 +1,7 @@
 {% load i18n %}
 
-<p class="title">{% trans 'Done' %}</p>
-<span>{% blocktrans %}We've sent password reset instructions to your email <b>{{ email }}</b>.{% endblocktrans %}</span>
+<p class="title title-h1">{% trans 'Done' %}</p>
+
+<span>
+  {% blocktrans %}We've sent password reset instructions to your email <b>{{ email }}</b>.{% endblocktrans %}
+</span>
