--- a/src/apps/users/templates/users/reset_complete.html
+++ b/src/apps/users/templates/users/reset_complete.html
@@ -8,8 +8,10 @@
       <h1 class="title-h1">{% trans 'Reset password' %}</h1>
     </div>
 
-    <div class="gc gc-alone">
-      <p>{% trans 'Your password was successfully changed. You will be redirected to a new page in 5 seconds.' %}</p>
+    <div class="text-styles gc gc-alone">
+      <p>
+        {% trans 'Your password was successfully changed. You will be redirected to a new page in 5 seconds.' %}
+      </p>
 
       <script>
         setTimeout(function() {
