--- a/src/apps/users/templates/users/reset_done.html
+++ b/src/apps/users/templates/users/reset_done.html
@@ -8,8 +8,10 @@
       <h1 class="title-h1">{% trans 'Reset password' %}</h1>
     </div>
 
-    <div class="gc gc-alone">
-      <p>{% blocktrans %}We've sent password reset instructions to your email <b>{{ email }}</b>.{% endblocktrans %}</p>
+    <div class="text-styles gc gc-alone">
+      <p>
+        {% blocktrans %}We've sent password reset instructions to your email <b>{{ email }}</b>.{% endblocktrans %}
+      </p>
     </div>
   </div>
 
