--- a/src/apps_common/comments/templates/comments/comments_form.html
+++ b/src/apps_common/comments/templates/comments/comments_form.html
@@ -14,9 +14,9 @@
       <button type="submit" class="btn btn-send disabled" disabled="disabled">{% trans 'Send' %}</button>
     </form>
   {% else %}
-    <div class="auth-needed">
+    <div class="auth-needed text-styles">
       {% url 'users:login' as login_href %}
-      {% blocktrans %}You must <a href="{{ login_href }}" class="login">login</a> to post a comment{% endblocktrans %}
+      {% blocktrans %}You must <a href="{{ login_href }}" class="login-popup">login</a> to post a comment{% endblocktrans %}
     </div>
   {% endif %}
 </div>
