--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -10,8 +10,8 @@ body {
   overflow-x: hidden;
   color: $text_color;
   line-height: 1.4375;
+  @include no_fontsize;
   @include default_font;
-  @include default_fontsize;
 }
 
 // Скрытый элемент
