--- a/src/static/admin/css/admin_fixes.css
+++ b/src/static/admin/css/admin_fixes.css
@@ -23,6 +23,10 @@ input[type=number] {
     width: 33px;
 }
 
+th.sorted {
+    width: 60px;
+}
+
 /* Admin table */
 .admin-table {
     position: relative;
