--- a/src/apps_common/google_maps/static/google_maps/scss/google_maps.scss
+++ b/src/apps_common/google_maps/static/google_maps/scss/google_maps.scss
@@ -10,11 +10,17 @@
   .bubble {
     font-family: Arial, sans-serif;
     @include font-size(14px);
+    @include media_interval(0, $media480) {
+      @include font-size(12px);
+    }
 
     .bubble-title {
       margin-bottom: 4px;
       font-weight: bold;
       @include font-size(16px);
+      @include media_interval(0, $media480) {
+        @include font-size(14px);
+      }
     }
   }
 }
