--- a/src/apps_common/yandex_maps/static/yandex_maps/scss/yandex_maps.scss
+++ b/src/apps_common/yandex_maps/static/yandex_maps/scss/yandex_maps.scss
@@ -2,11 +2,26 @@
 
 .ymaps-map {
   .ymaps-b-balloon__content {
-    @include font-size(14px);
-
     > ymaps {
       padding: 0 10px;
       @include border-box;
+    }
+
+    .bubble {
+      font-family: Arial, sans-serif;
+      @include font-size(14px);
+      @include media_interval(0, $media480) {
+        @include font-size(12px);
+      }
+
+      .bubble-title {
+        margin-bottom: 4px;
+        font-weight: bold;
+        @include font-size(16px);
+        @include media_interval(0, $media480) {
+          @include font-size(14px);
+        }
+      }
     }
   }
 }
