upd gallery + users

--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -27,7 +27,7 @@
 
         <span class="item-controls">
             <input type="checkbox" name="gallery-item" class="check-box" value="{{ item.id }}">
-            <a class="icon-edit item-crop" title="{% trans 'Crop image' %}" data-crop="{{ item.crop }}"></a>
+            <a class="icon-edit item-crop" title="{% trans 'Crop image' %}" data-crop="{{ item.image.croparea }}"></a>
             <a class="icon-repeat item-rotate-left"
                title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
             <a class="icon-repeat item-rotate-right" title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
