--- a/src/apps/users/templates/users/emails/reset_email.html
+++ b/src/apps/users/templates/users/emails/reset_email.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<p>{% blocktrans %}Hello, {{ user.username }}!{% endblocktrans %}</p>
+<p>{% blocktrans with username=user.username %}Hello, {{ username }}!{% endblocktrans %}</p>
 
 <p>{% blocktrans %}Someone (hopefully you) has requested to reset your password at{% endblocktrans %} <a href="{{ protocol}}://{{ domain }}">{{ site_name }}</a>. {% blocktrans %}If you did not request this reset, please ignore this message.{% endblocktrans %}</p>
 
