--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -10,6 +10,7 @@ body {
   overflow-x: hidden;
   color: $text_color;
   line-height: 1.4375;
+  letter-spacing: 0.4px;
   @include no_fontsize;
   @include default_font;
 }
