img max-width: 100%;

--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -6,6 +6,7 @@
   top: 0;
   min-width: 100.1%;
   min-height: 100.1%;
+  max-width: none;
   z-index: 1;
   @include transform(translateX(-50%));
   @include backface-visibility(hidden);
