--- a/src/apps/shop/templates/shop/admin/products.html
+++ b/src/apps/shop/templates/shop/admin/products.html
@@ -6,7 +6,7 @@
             <tr>
                 <th>{% trans 'Image' %}</th>
                 <th>{% trans 'Title' %}</th>
-                <th>{% trans 'Serial' %}</th>
+                <th>{% trans 'Serial number' %}</th>
                 <th>{% trans 'Cost' %}</th>
                 <th>{% trans 'Count' %}</th>
                 <th>{% trans 'Total cost' %}</th>
