new autocomplete_textbox

--- a/src/libs/autocomplete/templates/autocomplete/autocomplete_textbox.html
+++ b/src/libs/autocomplete/templates/autocomplete/autocomplete_textbox.html
@@ -1,6 +1,8 @@
-<input type="hidden" {{ attrs }} value="{{ value }}" name="{{ name }}"/>
-<div class="choices" style="display: none">
-  {% for choice in choices %}
-    <span class="choice">{{ choice }}</span>
-  {% endfor %}
+<div class="autocomplete_textbox">
+  <input type="text" {{ attrs }}
+         value="{{ value }}"
+         name="{{ name }}"
+         data-tags="{{ choices|join:"::" }}"/>
+
+  <div class="choices"></div>
 </div>
