ajax_form + rm names

--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -26,7 +26,7 @@
         </a>
 
         <span class="item-controls">
-            <input type="checkbox" name="gallery-item" class="check-box" value="{{ item.id }}">
+            <input type="checkbox" class="check-box" value="{{ item.id }}">
             <a class="icon-edit item-crop" title="{% trans 'Crop image' %}" data-crop="{{ item.image.croparea }}"></a>
             <a class="icon-repeat item-rotate-left"
                title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
@@ -45,7 +45,7 @@
         </a>
 
         <span class="item-controls">
-            <input type="checkbox" name="gallery-item" class="check-box" value="{{ item.id }}">
+            <input type="checkbox" class="check-box" value="{{ item.id }}">
             <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
         </span>
       </div>
