--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -27,16 +27,16 @@
 {% block gallery %}
   <div class="gallery gallery-standart" id="gallery-{{ name }}">
     {% block content %}
-      <input type="hidden" class="app_label" name="app_label" value="{{ app_label }}"/>
-      <input type="hidden" class="model_name" name="model_name" value="{{ model_name }}"/>
+      <input type="hidden" class="app_label" value="{{ app_label }}"/>
+      <input type="hidden" class="model_name" value="{{ model_name }}"/>
       <input type="hidden" class="gallery_id" name="{{ name }}" id="id_{{ name }}" value="{{ gallery.pk|default:"" }}"/>
 
       {% if gallery.IMAGE_MODEL %}
-        <input type="hidden" class="aspects" name="aspects" value="{{ image_aspects }}">
-        <input type="hidden" class="min_dimensions" name="min_dimensions" value="{{ image_min_dimensions }}">
-        <input type="hidden" class="max_dimensions" name="max_dimensions" value="{{ image_max_dimensions }}">
-        <input type="hidden" class="max_size" name="max_size" value="{{ image_max_size }}">
-        <input type="hidden" class="max_source" name="max_source" value="{{ image_max_source }}">
+        <input type="hidden" class="aspects" value="{{ image_aspects }}">
+        <input type="hidden" class="min_dimensions" value="{{ image_min_dimensions }}">
+        <input type="hidden" class="max_dimensions" value="{{ image_max_dimensions }}">
+        <input type="hidden" class="max_size" value="{{ image_max_size }}">
+        <input type="hidden" class="max_source" value="{{ image_max_source }}">
       {% endif %}
 
       <div class="gallery-wrapper">
@@ -86,7 +86,7 @@
             </a>
 
             <span class="item-controls">
-                <input type="checkbox" name="gallery-item" class="check-box" value="">
+                <input type="checkbox" class="check-box" value="">
                 <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
             </span>
           </div>
